[package]
name = "sample-rust-app"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lazy_static = "1.4"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic"]  }
opentelemetry-semantic-conventions = { version = "0.11.0" }
opentelemetry-http = "0.8.0"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.2.2"
